--- a/simplesVet/readme
+++ b/simplesVet/readme
@@ -1,1 +1,11 @@
-run server : npm run start
+Ambiente de Dev:
+
+Versão npm utilizada : 3.5.2;
+Versão node utilizada: v4.2.6;
+
+FIX ERROR: " 'Access-Control-Allow-Origin' header is present on the requested resource."
+Extensão 'Chrome' para controle de Acesso HTTP: 
+Link: https://chrome.google.com/webstore/detail/allow-control-allow-origi/nlfbmbojpeacfghkpbjhddihlkkiljbi
+
+Para Startar o Server:
+Use: run server : npm run start
